kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: '/$2index.html'
    nginx.ingress.kubernetes.io/server-snippet: |
          if ($host = 'homework.otus') {
            rewrite /homepage(/|$)(.*) /$2index.html break;
            rewrite /metrics(/|$)(.*) /$2metrics.html break;
          }
spec:
  ingressClassName: nginx
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /homepage(/|$)(.*)
        pathType: ImplementationSpecific
        #pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
      - path: /metrics.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: homework-service
            port:
              number: 80
